# demo

./: .gitignore
src/: pyproject.toml
src/PageHits/: apps.py  models.py  urls.py  views.py
src/PageHits/migrations/: 0001_initial.py
src/demo/: settings.py  urls.py
src/templates/: base.html  home.html
src/templates/base/: css.html  js.html
src/templates/snippets/: msg.html
